# akmal-rocket-web-api

./: Cargo.toml  README.md
migrations/2021-11-14-144823_create_todo/: up.sql
migrations/2021-11-19-155038_create_todo/: up.sql
src/: auth.rs  main.rs  models.rs  schema.rs  todo.rs
