[package]
name = "akmal-rocket-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"

[dependencies.rocket]
rocket = "0.5.0-rc.1"
features = ["json"]